Radical simplification of platform
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>